force-app/main/default/objects/Project_Visit__c/Project_Visit__c.object-meta.xml
<CustomObject>
    <label>Project Visit</label>
    <nameField>
        <displayFormat>PRJV-{0000}</displayFormat>
        <label>Project Visits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>