force-app/main/default/objects/Project_Visit__c/fields/Divisional_Strategic_Themes__c.field-meta.xml
<CustomField>
    <fullName>Divisional_Strategic_Themes__c</fullName>
    <formula>TEXT( Project__r.Divisional_Strategic_Themes__c )</formula>
    <label>Divisional Strategic Themes</label>
    <type>Text</type>
</CustomField>