force-app/main/default/objects/Project_Visit__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>TEXT( Project__r.Industry__c )</formula>
    <label>Industry</label>
    <type>Text</type>
</CustomField>