force-app/main/default/objects/Project_Visit__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Discussed on Visits</relationshipLabel>
    <relationshipName>Project_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>