force-app/main/default/objects/Project_Visit__c/fields/Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Location__c</fullName>
    <formula>TEXT( Project__r.Project_Location__c )</formula>
    <label>Project Location</label>
    <type>Text</type>
</CustomField>