force-app/main/default/objects/Project_Visit__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <formula>TEXT( Project__r.Project_Type__c )</formula>
    <label>Project Type</label>
    <type>Text</type>
</CustomField>