force-app/main/default/objects/Project_Visit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT( Project__r.Status__c )</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>