force-app/main/default/objects/Project_Visit__c/fields/Total_Opportunity_Sum__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Sum__c</fullName>
    <formula>Project__r.Total_Opportunity_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Opportunity Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>