force-app/main/default/objects/Project_Visit__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Projects Discussed</relationshipLabel>
    <relationshipName>Project_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>